--- a/lib/web/templates/admin/damage_type/_form.html.eex
+++ b/lib/web/templates/admin/damage_type/_form.html.eex
@@ -22,10 +22,10 @@
       </div>
 
       <div class="form-group">
-        <%= label f, :percentage_boost %>
-        <%= number_input f, :percentage_boost, class: "form-control", min: 0, max: 100 %>
-        <%= error_tag f, :percentage_boost %>
-        <span class="help-block"><%= Help.get("damage_type.percentage_boost") %></span>
+        <%= label f, :boost_ratio %>
+        <%= number_input f, :boost_ratio, class: "form-control", min: 0, max: 100 %>
+        <%= error_tag f, :boost_ratio %>
+        <span class="help-block"><%= Help.get("damage_type.boost_ratio") %></span>
       </div>
     </div>
 
