--- a/lib/web/templates/admin/damage_type/_form.html.eex
+++ b/lib/web/templates/admin/damage_type/_form.html.eex
@@ -27,6 +27,20 @@
         <%= error_tag f, :boost_ratio %>
         <span class="help-block"><%= Help.get("damage_type.boost_ratio") %></span>
       </div>
+
+      <div class="form-group">
+        <%= label f, :reverse_stat %>
+        <%= select f, :reverse_stat, Stats.basic_fields(), prompt: "Select a stat", class: "form-control" %>
+        <%= error_tag f, :reverse_stat %>
+        <span class="help-block"><%= Help.get("damage_type.stat_modifier") %></span>
+      </div>
+
+      <div class="form-group">
+        <%= label f, :reverse_boost %>
+        <%= number_input f, :reverse_boost, class: "form-control", min: 0, max: 100 %>
+        <%= error_tag f, :reverse_boost %>
+        <span class="help-block"><%= Help.get("damage_type.boost_ratio") %></span>
+      </div>
     </div>
 
     <div class="box-footer">
