--- a/lib/web/templates/admin/damage_type/index.html.eex
+++ b/lib/web/templates/admin/damage_type/index.html.eex
@@ -30,6 +30,8 @@
                 <th>Stat Modifier</th>
                 <th>Boost Ratio</th>
                 <th>Actions</th>
+                <th>Reverse Stat Modifier</th>
+                <th>Reverse Boost Ratio</th>
               </tr>
             </thead>
             <tbody>
@@ -38,6 +40,8 @@
                   <td><%= damage_type.key %></td>
                   <td><%= damage_type.stat_modifier %></td>
                   <td><%= damage_type.boost_ratio %></td>
+                  <td><%= damage_type.reverse_stat %></td>
+                  <td><%= damage_type.reverse_boost %></td>
                   <td>
                     <%= link("Edit", to: damage_type_path(@conn, :edit, damage_type.id), class: "btn btn-default btn-xs") %>
                   </td>
