Add a listen command
- Listen text on rooms and their features

--- a/lib/web/templates/admin/room/_console.html.eex
+++ b/lib/web/templates/admin/room/_console.html.eex
@@ -5,3 +5,4 @@
 <br />
 <span class="white">Who</span>: <%= @room |> who(@conn) %>
 <span class="white">Items</span>: <%= @room |> items(@conn) %>
+<%= @room |> listen() %>
