--- a/lib/web/templates/admin/room/_form.html.eex
+++ b/lib/web/templates/admin/room/_form.html.eex
@@ -18,6 +18,12 @@
       </div>
 
       <div class="form-group">
+        <%= label f, :listen %>
+        <%= textarea f, :listen, class: "form-control", rows: 5 %>
+        <%= error_tag f, :listen %>
+      </div>
+
+      <div class="form-group">
         <%= label f, :currency, currency() |> String.capitalize() %>
         <%= number_input f, :currency, class: "form-control" %>
         <%= error_tag f, :currency %>
