--- a/lib/web/templates/admin/npc/_form.html.eex
+++ b/lib/web/templates/admin/npc/_form.html.eex
@@ -31,10 +31,17 @@
       </div>
 
       <div class="form-group">
+        <%= label f, :status_listen %>
+        <%= text_input f, :status_listen, class: "form-control" %>
+        <%= error_tag f, :status_listen %>
+        <span class="help-block"><%= Help.get("npc.status_listen") %></span>
+      </div>
+
+      <div class="form-group">
         <%= label f, :description %>
         <%= textarea f, :description, class: "form-control", rows: 3 %>
         <%= error_tag f, :description %>
-        <span class="help-block">Valid template replacements: <code>[status_line]</code>, <code>[name]</code></span>
+        <span class="help-block"><%= Help.get("npc.description") %></span>
       </div>
 
       <div class="form-group">
