--- a/lib/web/templates/admin/room_feature/_form.html.eex
+++ b/lib/web/templates/admin/room_feature/_form.html.eex
@@ -10,7 +10,7 @@
       <div class="form-group">
         <%= label :feature, :key %>
         <%= text_input :feature, :key, value: Map.get(@feature, :key, ""), class: "form-control" %>
-        <span class="help-block">This will be used as the lookup key for the <code>look</code> command</span>
+        <span class="help-block"><%= Help.get("room_feature.key") %></span>
       </div>
 
       <div class="form-group">
