--- a/lib/web/templates/layout/admin.html.eex
+++ b/lib/web/templates/layout/admin.html.eex
@@ -185,6 +185,22 @@
       </aside>
 
       <div class="content-wrapper">
+        <%= if get_flash(@conn, :info) do %>
+          <section class="content-header">
+            <div class="callout callout-success">
+              <%= get_flash(@conn, :info) %>
+            </div>
+          </section>
+        <% end %>
+
+        <%= if get_flash(@conn, :error) do %>
+          <section class="content-header">
+            <div class="callout callout-danger">
+              <%= get_flash(@conn, :error) %>
+            </div>
+          </section>
+        <% end %>
+
         <%= render @view_module, @view_template, assigns %>
       </div>
 
