--- a/lib/web/templates/admin/npc_event/new.html.eex
+++ b/lib/web/templates/admin/npc_event/new.html.eex
@@ -18,7 +18,7 @@
 <section class="content">
   <div class="row">
     <div class="col-md-12">
-      <%= render "_form.html", path: npc_event_path(@conn, :create, @npc.id), method: "POST", event: @field, title: "New", submit: "Create", events: true %>
+      <%= render "_form.html", path: npc_event_path(@conn, :create, @npc.id), method: "POST", event: @field, title: "New", submit: "Create", events: true, errors: Map.get(assigns, :errors, nil) %>
     </div>
   </div>
 </section>
