Change up the site style
Add more solarized colors to the main theme

--- a/assets/home/css/base.scss
+++ b/assets/home/css/base.scss
@@ -1,5 +1,72 @@
 @import "app/css/colors";
 
+/**
+ * Header
+ */
+
+.site-header {
+  background-color: $blue;
+
+  a {
+    color: $base3;
+
+    &:hover {
+      color: $base3 * 1.3;
+    }
+  }
+}
+
+/**
+ * Bootstrap overrides
+ */
+
+a {
+  color: $blue;
+
+  &:hover {
+    color: $blue * 1.3;
+  }
+}
+
+.alert-danger {
+  background-color: lighten($red, 40%);
+  border-color: lighten($red, 10%);
+  color: $red;
+}
+
+.btn-primary {
+  background-color: $blue;
+  border-color: $blue;
+
+  &:hover {
+    background-color: $blue * 1.1;
+    border-color: $blue * 1.1;
+  }
+}
+
+.btn-secondary {
+  color: $base00 !important;
+  background-color: $base3;
+  border-color: $base3;
+
+  &:hover {
+    background-color: darken($base3, 3%);
+    border-color: darken($base3, 3%);
+  }
+}
+
+h1, h2, h3, h4, h5 {
+  color: $base02;
+}
+
+code {
+  color: $red;
+}
+
+/**
+ * Main Site
+ */
+
 main {
   padding-top: 3em;
 }
@@ -19,4 +86,15 @@ footer {
   padding: 10px;
   font-size: 1em;
   font-family: "Lucida Console", Monaco, monospace;
+}
+
+.actions {
+  display: block;
+  margin-top: 1rem;
+
+  .btn {
+    margin-top: 15px;
+    margin-bottom: 15px;
+    padding: .575rem .75rem;
+  }
 }
