--- a/lib/web/templates/session/new.html.eex
+++ b/lib/web/templates/session/new.html.eex
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-4 offset-md-4">
+  <div class="col-md-6 offset-md-3">
     <h3>Sign In</h3>
 
     <%= form_tag public_session_path(@conn, :create), [method: :post] do %>
@@ -13,9 +13,10 @@
         <%= text_input :user, :password, type: "password", class: "form-control", placeholder: "Password" %>
       </div>
 
-      <%= submit "Sign In", class: "btn btn-primary btn-block btn-flat" %>
+      <div class="actions">
+        <%= submit "Sign In", class: "btn btn-primary btn-block btn-flat" %>
+        <%= link("Create an account", to: public_registration_path(@conn, :new), class: "btn btn-secondary btn-block btn-flat") %>
+      </div>
     <% end %>
-
-    <%= link("Create an account", to: public_registration_path(@conn, :new)) %>
   </div>
 </div>
