--- a/lib/web/templates/admin/user/show.html.eex
+++ b/lib/web/templates/admin/user/show.html.eex
@@ -7,7 +7,7 @@
 <section class="content">
   <div class="row">
     <div class="col-md-6">
-      <div class="box">
+      <div class="box box-primary">
         <div class="box-header">
           <h3 class="box-title">Attributes</h3>
           <div class="box-tools">
@@ -105,18 +105,20 @@
     </div>
   </div>
 
-  <div class="row">
-    <div class="col-md-12">
-      <div class="box">
-        <div class="box-header">
-          <h3 class="box-title">Notes</h3>
-        </div>
-        <div class="box-body">
-          <%= @user.notes %>
+  <%= if @user.notes do %>
+    <div class="row">
+      <div class="col-md-12">
+        <div class="box">
+          <div class="box-header">
+            <h3 class="box-title">Notes</h3>
+          </div>
+          <div class="box-body">
+            <%= @user.notes %>
+          </div>
         </div>
       </div>
     </div>
-  </div>
+  <% end %>
 
   <div class="row">
     <div class="col-md-12">
