--- a/lib/web/templates/admin/class/index.html.eex
+++ b/lib/web/templates/admin/class/index.html.eex
@@ -16,7 +16,7 @@
 <section class="content">
   <div class="row">
     <div class="col-md-12">
-      <div class="box">
+      <div class="box box-primary">
         <div class="box-header">
           <div class="box-tools">
             <%= link("New Class", to: class_path(@conn, :new), class: "btn btn-primary") %>
