--- a/lib/web/templates/admin/class_skill/new.html.eex
+++ b/lib/web/templates/admin/class_skill/new.html.eex
@@ -17,7 +17,7 @@
 
 <section class="content">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-10 col-md-offset-1">
       <%= render "_form.html", path: class_skill_path(@conn, :create, @class.id), skills: @skills, changeset: @changeset, title: "New", submit: "Create" %>
     </div>
   </div>
