--- a/lib/web/templates/admin/race/_form.html.eex
+++ b/lib/web/templates/admin/race/_form.html.eex
@@ -1,31 +1,37 @@
-<div class="box">
-  <div class="box-header">
+<div class="box box-primary">
+  <div class="box-header with-border">
     <h3 class="box-title"><%= @title %></h3>
   </div>
 
-  <%= form_for @changeset, @path, fn (f) -> %>
+  <%= form_for @changeset, @path, [class: "form-horizontal"], fn (f) -> %>
     <div class="box-body">
       <div class="form-group">
-        <%= label f, :name %>
-        <%= text_input f, :name, class: "form-control" %>
-        <%= error_tag f, :name %>
+        <%= label f, :name, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= text_input f, :name, class: "form-control" %>
+          <%= error_tag f, :name %>
+        </div>
       </div>
 
       <div class="form-group">
-        <%= label f, :description %>
-        <%= textarea f, :description, class: "form-control" %>
-        <%= error_tag f, :description %>
+        <%= label f, :description, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= textarea f, :description, class: "form-control" %>
+          <%= error_tag f, :description %>
+        </div>
       </div>
 
       <div class="form-group">
-        <%= label f, :starting_stats %>
-        <%= textarea f, :starting_stats, value: @changeset |> starting_stats(), class: "form-control", rows: 10 %>
-        <%= error_tag f, :starting_stats %>
+        <%= label f, :starting_stats, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= textarea f, :starting_stats, value: @changeset |> starting_stats(), class: "form-control", rows: 13 %>
+          <%= error_tag f, :starting_stats %>
+        </div>
       </div>
     </div>
 
     <div class="box-footer">
-      <%= submit @submit, class: "btn btn-primary" %>
+      <%= submit @submit, class: "btn btn-primary pull-right" %>
     </div>
   <% end %>
 </div>
