--- a/lib/web/templates/admin/skill/index.html.eex
+++ b/lib/web/templates/admin/skill/index.html.eex
@@ -7,7 +7,7 @@
 <section class="content">
   <div class="row">
     <div class="col-md-9">
-      <div class="box">
+      <div class="box box-primary">
         <div class="box-header">
           <div class="box-tools">
             <%= link("New Skill", to: skill_path(@conn, :new), class: "btn btn-primary") %>
